[package]
name = "neko2p"
version = "0.1.0"
edition = "2024"

[features]
ssh = ["dep:ssh"]
tun = ["dep:neko-tun"]

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
common = { path = "common" }
log = "0.4.26"
rand = "0.9.0"
rustls = "0.23.23"
rustls-pki-types = "1.11.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = { version = "1.44.0", features = ["full"] }
tokio-rustls = "0.26.2"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["v4"] }
webpki-roots = "0.26.8"

# protocols
anytls = { path = "protocols/anytls" }
hysteria2 = { path = "protocols/hysteria2" }
shadowsocks = { path = "protocols/shadowsocks" }
ssh = { path = "protocols/ssh", optional = true }
socks5 = { path = "protocols/socks5" }
trojan = { path = "protocols/trojan" }
vless = { path = "protocols/vless" }
vmess = { path = "protocols/vmess" }

dns = { path = "dns" }
neko-tun = { path = "tun", optional = true }
