[package]
name = "neko2p"
version = "0.1.0"
edition = "2024"

[features]
default = ["ssh", "tun"]
ssh = ["dep:ssh"]
tun = ["dep:neko-tun"]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.49", features = ["derive"] }
common = { path = "common" }
log = "0.4.28"
rand = "0.9.2"
rustls = "0.23.32"
rustls-pki-types = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.4"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
webpki-roots = "1.0.3"

# protocols
anytls = { path = "protocols/anytls" }
hysteria2 = { path = "protocols/hysteria2" }
shadowsocks = { path = "protocols/shadowsocks" }
ssh = { path = "protocols/ssh", optional = true }
socks5 = { path = "protocols/socks5" }
trojan = { path = "protocols/trojan" }
vless = { path = "protocols/vless" }
vmess = { path = "protocols/vmess" }

dns = { path = "dns" }
neko-tun = { path = "tun", optional = true }
