[package]
name = "anytls"
version = "0.1.0"
edition = "2024"
description = "anytls protocol implementation"

[dependencies]
bytes = "1.10.1"
common = { path = "../../common" }
futures = "0.3.31"
md5 = "0.7.0"
rand = "0.9.2"
rustls-pki-types = "1.11.0"
sha2 = "0.10.8"
tokio = { version = "1.48.0", features = ["net", "io-util"] }
tokio-rustls = "0.26.4"
webpki-roots = "1.0.3"
