[package]
name = "hysteria2"
version = "0.1.0"
edition = "2024"
description = "hysteria2 protocol implementation"

[dependencies]
anyhow = "1.0.96"
bytes = "1.9.0"
common = { path = "../../common" }
futures = "0.3.31"
h3 = "0.0.6"
h3-quinn = "0.0.7"
http = "1.2.0"
quinn = "0.11.6"
quinn-proto = "0.11.9"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["net"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
webpki-roots = "0.26.8"
