[package]
name = "hysteria2"
version = "0.1.0"
edition = "2024"
description = "hysteria2 protocol implementation"

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
common = { path = "../../common" }
futures = "0.3.31"
h3 = "0.0.7"
h3-quinn = "0.0.9"
http = "1.3.1"
quinn = "0.11.7"
quinn-proto = "0.11.10"
rand = "0.9.0"
tokio = { version = "1.44.1", features = ["net"] }
tokio-util = { version = "0.7.14", features = ["codec"] }
webpki-roots = "0.26.8"
