[package]
name = "hysteria2"
version = "0.1.0"
edition = "2024"
description = "hysteria2 protocol implementation"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
common = { path = "../../common" }
futures = "0.3.31"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.3.1"
quinn = "0.11.9"
quinn-proto = "0.11.13"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["net"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
webpki-roots = "1.0.4"
