[package]
name = "shadowsocks"
version = "0.1.0"
edition = "2024"
description = "shadowsocks protocol implementation"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.97"
base64 = "0.22.1"
blake3 = "1.6.1"
bytes = "1.10.1"
chacha20poly1305 = "0.10.1"
common = { path = "../../common" }
hkdf = "0.12.4"
md-5 = "0.10.6"
rand = "0.9.0"
sha1 = "0.10.6"
tokio = { version = "1.44.1", features = ["io-util", "net"] }
