[package]
name = "trojan"
version = "0.1.0"
edition = "2024"
description = "trojan protocol implementation"

[dependencies]
bytes = "1.10.0"
common = { path = "../../common" }
rustls-pki-types = "1.11.0"
sha2 = "0.10.8"
tokio = { version = "1.44.0", features = ["io-util", "net"] }
tokio-rustls = "0.26.2"
webpki-roots = "0.26.8"
