[package]
name = "trojan"
version = "0.1.0"
edition = "2024"
description = "trojan protocol implementation"

[dependencies]
bytes = "1.10.1"
common = { path = "../../common" }
rustls-pki-types = "1.13.0"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["io-util", "net"] }
tokio-rustls = "0.26.4"
webpki-roots = "1.0.4"
