[package]
name = "vmess"
version = "0.1.0"
edition = "2021"
description = "vmess protocol implementation"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
bytes = "1.9.0"
common = { path = "../../common" }
crc32fast = "1.4.2"
fnv_rs = "0.4.3"
md-5 = "0.10.6"
rand = "0.8.5"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["io-util", "net"] }
uuid = "1.12.1"
