[package]
name = "vmess"
version = "0.1.0"
edition = "2024"
description = "vmess protocol implementation"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
bytes = "1.10.1"
common = { path = "../../common" }
crc32fast = "1.5.0"
fnv_rs = "0.4.4"
md-5 = "0.10.6"
rand = "0.9.2"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["io-util", "net"] }
uuid = "1.18.1"
